--- a/SharedTimer/src/main/resources/templates/index.html
+++ b/SharedTimer/src/main/resources/templates/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
-
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
   <head>
-    <meta charset="UTF-8" />
-
-    <title>test page</title>
+    <title>WebSocket Chat</title>
+    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script th:src="@{/webjars/sockjs-client/sockjs.min.js}"></script>
+    <script th:src="@{/webjars/stomp-websocket/stomp.min.js}"></script>
+    <script th:src="@{/js/app.js}"></script>
   </head>
-
   <body>
-    <h1>test page</h1>
+    <div class="form-group">
+      <label for="connect">WebSocket connection:</label>
+      <button id="connect" type="submit">Connect</button>
+      <button id="disconnect" type="submit" disabled="disabled">
+        Disconnect
+      </button>
+    </div>
+    <form class="form-inline">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" id="name" placeholder="Your name" />
+      </div>
+      <div class="form-group">
+        <label for="name">Message</label>
+        <input type="text" id="statement" placeholder="Your Message" />
+      </div>
+      <button id="send" type="submit">Send</button>
+    </form>
+    <table>
+      <tbody id="message"></tbody>
+    </table>
   </body>
 </html>
