ローカルホスト上で動くように整備しました

--- a/SharedTimer/src/main/resources/templates/index.html
+++ b/SharedTimer/src/main/resources/templates/index.html
@@ -19,7 +19,8 @@
                 <!--classは複数指定できる。上の場合btnとbtn-primary-->                
                 <button type="button" class="btn btn-danger">Stop</button>
         </div>
-          <script src="./js/main2.js"></script>
+        <script th:src="@{/js/main2.js}"></script>
     </article>
   </body>
+  
 </html>
