--- a/SharedTimer/src/main/resources/templates/index.html
+++ b/SharedTimer/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
     <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script th:src="@{/webjars/sockjs-client/sockjs.min.js}"></script>
     <script th:src="@{/webjars/stomp-websocket/stomp.min.js}"></script>
-    <script th:src="@{/js/app.js}"></script>
+    <!-- <script th:src="@{/js/app.js}"></script> -->
   </head>
   <body>
     <noscript
