--- a/SharedTimer/src/main/resources/templates/index.html
+++ b/SharedTimer/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
       th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"
       rel="stylesheet"
     />
-    <link th:href="@{/main.css}" rel="stylesheet" />
+    <link th:href="@{/index_style.css}" rel="stylesheet" />
     <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script th:src="@{/webjars/sockjs-client/sockjs.min.js}"></script>
     <script th:src="@{/webjars/stomp-websocket/stomp.min.js}"></script>
@@ -21,7 +21,7 @@
     >
     <div id="main-content" class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col">
           <form class="form-inline">
             <div class="form-group">
               <label for="connect">WebSocket connection:</label>
@@ -39,35 +39,6 @@
             </div>
           </form>
         </div>
-        <div class="col-md-6">
-          <form class="form-inline">
-            <div class="form-group">
-              <label for="name">What is your name?</label>
-              <input
-                type="text"
-                id="name"
-                class="form-control"
-                placeholder="Your name here..."
-              />
-            </div>
-            <button id="send" class="btn btn-default" type="submit">
-              Send
-            </button>
-          </form>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <table id="conversation" class="table table-striped">
-            <thead>
-              <tr>
-                <th>Greetings</th>
-              </tr>
-            </thead>
-            <tbody id="greetings"></tbody>
-          </table>
-        </div>
-      </div>
       <article>
         <div class="container-fluid">
           <p class="def_timer">00:00:00</p>
